--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <h2>DAVID </h2>
+        <h2>DAVID F</h2>
         <p>Tecnico <span class="typed" data-typed-items="informatico"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
