--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <img src="assets/img/my-profile-img.jpg" alt="" data-aos="fade-in" class="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <h2>Alberto</h2>
+        <h2>DAVID F.R</h2>
         <p>Tecnico <span class="typed" data-typed-items="informatico"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
