--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Sobre mi</h2>
+        <h2>Sobre</h2>
         <p>Mi nombre es David, he sido estudiante de un grado medio SMR en Atlantida cidep, y actualmente soy estudiante en Ramon y cajal de un grado superior de Asir, este portafolio esta basado en mis experiencias y proyectos. muchas Gracias</p>
       </div><!-- End Section Title -->
 
